Make --enable-cairo work for windows/msvc by switching it over to our build system.  Bug 290518, r=vlad, pavlov.