gfx/cairo/cairo/src/cairo-wideint.h
@@ -1,5 +1,5 @@
 /*
- * $Id: cairo-wideint.h,v 1.4 2005/03/29 20:53:07 tor%cs.brown.edu Exp $
+ * $Id: cairo-wideint.h,v 1.5 2005/04/19 17:19:45 bryner%brianryner.com Exp $
  *
  * Copyright © 2004 Keith Packard
  *
@@ -38,14 +38,14 @@
 #ifndef CAIRO_WIDEINT_H
 #define CAIRO_WIDEINT_H
 
-#if defined (__SVR4) && defined (__sun)
+#if HAVE_STDINT_H
+# include <stdint.h>
+#elif HAVE_INTTYPES_H
+# include <inttypes.h>
+#elif HAVE_SYS_INT_TYPES_H
 # include <sys/int_types.h>
 #else
-# if defined (__OpenBSD__) || defined (_AIX)
-#  include <inttypes.h>
-# else 
-#  include <stdint.h>
-# endif
+# include "mozstdint.h"
 #endif
 
 /*
